# MediaRise-Robot-Console

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIO_DEBUG.md  CHECK_WEBSOCKET.md  Cargo.toml  FIX_STT_KEY.md  INSTALL.md  QUICK_CHECK.md  README.md  install.sh  robot_client.py  test_websocket.sh  uninstall.sh
docs/: MQTT_SETUP.md  ROBOT_WEBSOCKET.md
insomnia/: AUDIO_TESTING.md  DEBUG_LLM.md  HELLO_EXAMPLES.md  HELLO_MESSAGE.json  MediaRiseRobotConsole-API.json  README.md  TROUBLESHOOTING.md  WEBSOCKET_GUIDE.md  Xiaozhi-API.json  test_hmac.py  websocket_test.html
macos/: com.mediarise.robot-console.plist
migrations/: 001_initial.sql  002_add_session_logs.sql
src/: config.rs  main.rs  server.rs
src/handlers/: assets.rs  mod.rs  ota.rs  upload.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/mqtt/: handler.rs  mod.rs
src/services/: audio.rs  device.rs  knowledge.rs  llm.rs  mod.rs  session.rs  stt.rs  tts.rs
src/storage/: database.rs  files.rs  mod.rs
src/utils/: audio.rs  crypto.rs  jwt.rs  mod.rs
src/websocket/: audio.rs  mod.rs  protocol.rs  session.rs
systemd/: mediarise-robot-console.service
