[package]
name = "mediarise-robot-console"
version = "0.1.0"
edition = "2021"
authors = ["Xiaozhi Team"]
description = "Backend server for Xiaozhi ESP32 devices"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "multipart", "json", "tokio"] }
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "metrics"] }
rubato = "0.16.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
futures = "0.3"

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# HTTP client (for Grok API)
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "sqlite", "mysql", "chrono", "uuid"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Crypto
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
jsonwebtoken = "9.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Audio processing (Opus)
audiopus = "0.2"

# File storage
async-fs = "1.6"

# Random
rand = "0.8"

# Utilities
once_cell = "1.19"

# MQTT (optional)
rumqttc = { version = "0.12", optional = true }

# Rate limiting
tower_governor = "0.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"

[features]
default = []
mqtt = ["rumqttc"]
